<resources>
    <string name="app_name">Mosaic</string>

    <!--Custom fonts names here-->
    <string name="font_open_sans">OpenSans_Light.ttf</string>
    <string name="font_open_sans_regular">OpenSans_Regular.ttf</string>
    <string name="font_open_sans_bold">OpenSans_Bold.ttf</string>
    <string name="font_open_sans_semi_bold">OpenSans_Semibold.ttf</string>
    <string name="font_open_sans_italic">OpenSans_Italic.ttf</string>
    <string name="factivity_login_tv_hint_email">Email</string>
    <string name="factivity_login_tv_hint_password">Password</string>
    <string name="factivity_login_btn_submit">Submit</string>
    <string name="factivity_login_iv_content_description_msg">Image Not Found</string>
    <string name="factivity_login_tv_registration">Not Registrate yet,click to registration?</string>
    <string name="factivity_login_tv_forgot_password">Forgot Password ?</string>
    <string name="factivity_login_tv_or">OR</string>
    <string name="factivity_login_btn_facebook">Facebook</string>
    <string name="err_msg_name">Enter name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter correct password</string>
    <string name="enter_registrate_email">Email</string>
    <string name="activity_forgot_password_submit">Send</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Setting</string>
    <string name="activity_registration_submit">Submit</string>
    <string name="msg_network_error">Network error. Please try again after some time</string>
    <string name="msg_loading">Loading…</string>
    <string name="err_msg_enter_client_id">Please enter email id</string>
    <string name="err_msg_enter_password">Please enter password</string>
    <string name="msg_no_internet">No internet. Please try after some time</string>
    <string name="err_msg_permission_write_phone">Permission to access write storage is required in order to continue</string>
    <string name="fragment_feedback_btn_submit">Submit</string>
    <string name="err_msg_enter_msg">Please enter message that you want to suggest us</string>
    <string name="fragment_contact_us_tv_spannable_title">"<u>HEAD CENTER</u>"</string>
    <string name="please_wait">Please wait...</string>
    <string name="pick_file">Pick file</string>
    <string name="toast_pick_file_error">Unable to pick file. Check status of file manager.</string>
    <string name="no_data_found">No data found</string>
    TAG_N
    <string name="TAG_NO">NO</string>
    <string name="err_msg_enter_valid_email_msg">Enter valid email id</string>
    <string name="TAG_EXIT_WARN_MSG">Are you sure you want to exit ?</string>
    <string name="TAG_YES">Yes</string>

</resources>
