<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_sv_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/activity_login_iv_logo"
            android:layout_width="0dp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="@dimen/_32sdp"
            android:contentDescription="@string/factivity_login_iv_content_description_msg"
            android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_new"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            android:visibility="invisible"

            tools:layout_constraintTop_creator="1" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_login_tnl_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_iv_logo"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1">

            <EditText
                android:id="@+id/activity_login_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/factivity_login_tv_hint_email"
                android:text="numesh818@gmail.com"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_login_tnl_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_18sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_tnl_email"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1">

            <EditText
                android:id="@+id/activity_login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/factivity_login_tv_hint_password"
                android:inputType="textPassword"
                android:text="123456"
                android:maxLines="1"


                />
        </android.support.design.widget.TextInputLayout>

        <com.example.indianic.baseproject.common.CustomButton
            android:id="@+id/activity_login_btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_45sdp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/factivity_login_btn_submit"
            android:textColor="@color/colorWhite"
            app:font_name="@string/font_open_sans_semi_bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_tnl_password"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <com.example.indianic.baseproject.common.CustomTextview
            android:id="@+id/activity_login_iv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/factivity_login_tv_forgot_password"
            android:textColor="@color/colorPrimaryDark"
            app:font_name="@string/font_open_sans_semi_bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_tnl_password"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
